--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "yandex-maps-ads",
   "version": "1.0.0",
   "description": "Мобильное приложение для размещения рекламы в Яндекс Картах",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
-    "start": "npx serve .",
-    "build": "echo 'Static site ready'",
-    "dev": "npx serve . -l 3000"
+    "start": "node index.js",
+    "build": "echo 'Build complete'",
+    "dev": "node index.js"
   },
   "keywords": ["yandex", "maps", "ads", "mobile", "webapp"],
   "author": "makarosha182",
   "license": "MIT",
   "dependencies": {
-    "serve": "^14.0.0"
+    "express": "^4.18.2"
   },
   "engines": {
     "node": "18.x"
